--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -37,6 +37,139 @@
     "\n",
     "3. Instead of updating the inventory by subtracting 1 from the quantity of each product, only do it for  the products that were ordered (those in \"customer_orders\")."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01c0a6e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Product list\n",
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6999817a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Create inventory dictionary\n",
+    "inventory = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f63ab06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Request quantities for each product\n",
+    "for product in products:\n",
+    "    quantity = int(input(f\"Enter the available quantity for {product}: \"))\n",
+    "    inventory[product] = quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56b5a633",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Create an empty set for customer orders\n",
+    "customer_orders = set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f998503f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Request products until the user stops\n",
+    "while True:\n",
+    "    order = input(\"Enter the name of a product the customer wants to order: \")\n",
+    "    \n",
+    "    if order in products:\n",
+    "        customer_orders.add(order)\n",
+    "    else:\n",
+    "        print(\"Product not available. Please try again.\")\n",
+    "    \n",
+    "    # Ask if the user wants to add another product\n",
+    "    another = input(\"Do you want to add another product? (yes/no): \").strip().lower()\n",
+    "    if another != \"yes\":\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eb03fe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. Display ordered products\n",
+    "print(\"\\nOrdered products:\", customer_orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37e2abe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. Calculate order statistics\n",
+    "total_products_ordered = len(customer_orders)\n",
+    "percentage_ordered = (total_products_ordered / len(products)) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e3e5f51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8. Store and display statistics\n",
+    "order_status = (total_products_ordered, percentage_ordered)\n",
+    "print(\"\\nOrder Statistics:\")\n",
+    "print(f\"Total Products Ordered: {order_status[0]}\")\n",
+    "print(f\"Percentage of Products Ordered: {order_status[1]:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fcac990",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9. Update inventory for ordered products\n",
+    "for product in customer_orders:\n",
+    "    if inventory[product] > 0:\n",
+    "        inventory[product] -= 1\n",
+    "    else:\n",
+    "        print(f\"Not enough stock for {product}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a10ea620",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 10. Print updated inventory\n",
+    "print(\"\\nUpdated Inventory:\")\n",
+    "for product, quantity in inventory.items():\n",
+    "    print(f\"{product}: {quantity}\")"
+   ]
   }
  ],
  "metadata": {
@@ -55,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
